argocd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.runicrealms.com`)
      kind: Rule
      middlewares:
        - name: argocd-headers
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: "argocd-server-transport"
  tls:
    certResolver: cloudflare

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-headers
  namespace: argocd
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: "argocd.runicrealms.com"
